[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 40.0

[node name="MenuPanel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_right = 491.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="Control" type="Control" parent="MenuPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 491.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="SettingsButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 80.0
margin_right = 491.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="Control2" type="Control" parent="MenuPanel/VBoxContainer"]
margin_top = 132.0
margin_right = 491.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="StartingMenuButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 160.0
margin_right = 491.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Starting Screen"

[node name="Control3" type="Control" parent="MenuPanel/VBoxContainer"]
margin_top = 212.0
margin_right = 491.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 240.0
margin_right = 491.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
